Update api call to use eventstore, this is working but call returns before the subscriber has handled the event.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/mackah666/EventStoreMonitor#readme",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "cron": "^1.0.9",
     "event-store-client": "0.0.5",
+    "express": "^4.12.4",
     "node-uuid": "^1.4.3"
   }
 }
