--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cron": "^1.0.9",
     "event-store-client": "0.0.5",
     "express": "^4.12.4",
-    "node-uuid": "^1.4.3"
+    "node-uuid": "^1.4.3",
+    "wait.for": "^0.6.6"
   }
 }
